# automated-file-organizer

./: .dockerignore  .fileorganizer.json.backup  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  debug_test.py  main.py  pyproject.toml  requirements.txt  run_tests.py
.github/workflows/: python-tests.yml
cli/: main.py
config/: config.json
organizer/: cli.py  file_mover.py  logger.py  utils.py
tests/: test_cli.py  test_config_autogen.py  test_file_mover.py  test_file_mover_integration.py
